--- a/University Management System/nbproject/private/private.properties
+++ b/University Management System/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ooo\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Luffy\\AppData\\Roaming\\NetBeans\\19\\build.properties
