--- a/University Management System/nbproject/project.properties
+++ b/University Management System/nbproject/project.properties
@@ -34,14 +34,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/University_Management_System
 excludes=
 file.reference.jcalendar-tz-1.3.3-4.jar=E:\\JAVA\\jcalendar-tz-1.3.3-4.jar
+file.reference.jcalendar-tz-1.3.3-4.jar-1=C:\\Users\\Luffy\\Downloads\\jcalendar-tz-1.3.3-4.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\Luffy\\Downloads\\mysql-connector-j-8.1.0.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\ooo\\Downloads\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar-1=C:\\Users\\Luffy\\Downloads\\mysql-connector-java-8.0.28.jar
 file.reference.rs2xml.jar=E:\\JAVA\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\Luffy\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.jcalendar-tz-1.3.3-4.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}:\
+    ${file.reference.jcalendar-tz-1.3.3-4.jar-1}:\
+    ${file.reference.rs2xml.jar-1}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +85,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=University_Management_System
-main.class=university.management.system.UniversityManagementSystem
+main.class=university.management.system.Splash
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
